client/src/StyleSheets/Profile.css
/* PROFILE */
.icon {
  color: white;
}


.profile-page {
  margin: 0;
  padding-top:24px;
  min-height: 766px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #D7272F;
}

.profile-media-query {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  width: 50%;
  height: 500px;
  background-color: #D7272F;
  color: white;
  overflow-y: scroll;
}

.inner-profile {
  width:100%;
  height:75%;
}

.profile-div {
  background-color: #D7272F; 
  color: white; 
  font-weight: bolder;
  width: 100%;
}

.avatar-and-name {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #D7272F;
  text-align: center;
  margin-bottom: 40px;
}

.profile-name {
  color: white;
  font-weight: bolder ;
  padding: 16px 0 2px 0 ;
}


.update-user-form {
  width: 500px;
  
}

.up-button-container {
  text-align:center;
}

.update-profile-button {
  /* background-color: #D7272F;
  color: white; */
  text-align:center;
  padding: 0;
  border: none;
  border-radius: 8px;
  width: 90%;
  height: 40px;
  font-weight: 900;
  font-size: large;
  margin-top: 25px;
  box-shadow: rgba(139, 129, 175, 0.3) 0px 4px 6px -.5px, rgba(6, 241, 45, 0.3) 0px 2px 4px -1px;
}

.add-punchcard-button {
  padding: 0;
  border: none;
  border-radius: 8px;
  width: 20%;
  height: 30px;
  font-weight: 900;
  font-size: medium;
  box-shadow: rgba(139, 129, 175, 0.3) 0px 4px 6px -.5px, rgba(6, 241, 45, 0.3) 0px 2px 4px -1px;
  margin-bottom: 8px;
}

.password-update {
  background-color: white;
  color: #D7272F;
  padding: 0;
  border: none;
  border-radius: 8px;
  width: 35%;
  height: 30px;
  font-weight: 900;
  font-size: medium;
  box-shadow: rgba(139, 129, 175, 0.3) 0px 4px 6px -.5px, rgba(6, 241, 45, 0.3) 0px 2px 4px -1px;
  margin-bottom: 8px;
  
}

@media screen and (min-width: 600px){
  .profile-media-query {
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    /* border: 3px solid blue; */
    width: 50%;
    height: 700px;
    background-color: white;
    color: black;
  }
  .profile-div {
    background-color: white;
    color: black; 
    font-weight: bolder;
    width: 75%;
    padding-left: 25%;
  }
  .avatar-and-name {
    background-color: white;
  }
  .profile-name {
    color: #D7272F
  }
  .icon {
    color: black
  }
  .password-update {
    background-color: #D7272F;
    color: white;
  }
}

